# CppLogger

./: CMakeLists.txt  README.md
Examples/: CMakeLists.txt
Examples/src/: testLogger.cpp
Logger/: CMakeLists.txt
Logger/include/: CppLogger.h
Logger/src/: CppLogger.cpp
cmake/: Settings.cmake
docs/: BuildSteps.md  BuildStepsLinux.md  BuildStepsWindows.md  UserGuide.md
